--- a/QRCodeScan/QRCodeScanViewController.xib
+++ b/QRCodeScan/QRCodeScanViewController.xib
@@ -12,6 +12,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="QRCodeScanViewController">
             <connections>
+                <outlet property="backButton" destination="dPx-5l-kK8" id="qLW-QI-hZo"/>
                 <outlet property="cautionLabel" destination="z8S-d9-CEV" id="htm-dR-IKZ"/>
                 <outlet property="previewView" destination="b0y-T7-m36" id="Vhr-uw-YdB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
@@ -32,6 +33,17 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dPx-5l-kK8">
+                    <rect key="frame" x="8" y="28" width="50" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="AZq-ys-hF7"/>
+                        <constraint firstAttribute="width" constant="50" id="Wi9-cu-eNs"/>
+                    </constraints>
+                    <state key="normal" image="back"/>
+                    <connections>
+                        <action selector="backAction:" destination="-1" eventType="touchUpInside" id="kGx-h2-3TK"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
@@ -41,9 +53,14 @@
                 <constraint firstItem="b0y-T7-m36" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="UgT-nV-iz0"/>
                 <constraint firstItem="z8S-d9-CEV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="iw1-wo-NLQ"/>
                 <constraint firstItem="b0y-T7-m36" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="jZq-ck-S8C"/>
+                <constraint firstItem="dPx-5l-kK8" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="8" id="nlG-A8-3Bx"/>
+                <constraint firstItem="dPx-5l-kK8" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="8" id="obf-Bu-C9q"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="34.5" y="53.5"/>
         </view>
     </objects>
+    <resources>
+        <image name="back" width="27" height="27"/>
+    </resources>
 </document>
