--- a/QRCodeScan/QRCodeScanViewController.xib
+++ b/QRCodeScan/QRCodeScanViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -48,15 +47,14 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="b0y-T7-m36" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="1wk-hX-RTA"/>
-                <constraint firstItem="b0y-T7-m36" firstAttribute="trailing" secondItem="Q5M-cg-NOt" secondAttribute="trailing" id="HbY-kO-fyN"/>
+                <constraint firstItem="b0y-T7-m36" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="HbY-kO-fyN"/>
                 <constraint firstItem="z8S-d9-CEV" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" id="OgN-71-nCu"/>
-                <constraint firstItem="b0y-T7-m36" firstAttribute="bottom" secondItem="Q5M-cg-NOt" secondAttribute="bottom" id="UgT-nV-iz0"/>
+                <constraint firstItem="b0y-T7-m36" firstAttribute="bottom" secondItem="i5M-Pr-FkT" secondAttribute="bottom" id="UgT-nV-iz0"/>
                 <constraint firstItem="z8S-d9-CEV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="iw1-wo-NLQ"/>
-                <constraint firstItem="b0y-T7-m36" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" id="jZq-ck-S8C"/>
-                <constraint firstItem="dPx-5l-kK8" firstAttribute="top" secondItem="Q5M-cg-NOt" secondAttribute="top" constant="8" id="nlG-A8-3Bx"/>
-                <constraint firstItem="dPx-5l-kK8" firstAttribute="leading" secondItem="Q5M-cg-NOt" secondAttribute="leading" constant="8" id="obf-Bu-C9q"/>
+                <constraint firstItem="b0y-T7-m36" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="jZq-ck-S8C"/>
+                <constraint firstItem="dPx-5l-kK8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="28" id="nlG-A8-3Bx"/>
+                <constraint firstItem="dPx-5l-kK8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="obf-Bu-C9q"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="Q5M-cg-NOt"/>
             <point key="canvasLocation" x="34.5" y="53.5"/>
         </view>
     </objects>
