--- a/QRCodeScan/QRCodeScanViewController.xib
+++ b/QRCodeScan/QRCodeScanViewController.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -13,6 +13,7 @@
             <connections>
                 <outlet property="backButton" destination="dPx-5l-kK8" id="qLW-QI-hZo"/>
                 <outlet property="cautionLabel" destination="z8S-d9-CEV" id="htm-dR-IKZ"/>
+                <outlet property="flashLightButton" destination="HRR-PX-oUr" id="Hb7-U8-qP4"/>
                 <outlet property="previewView" destination="b0y-T7-m36" id="Vhr-uw-YdB"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -27,11 +28,22 @@
                     <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
                 <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Available in vertical orientation only" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z8S-d9-CEV">
-                    <rect key="frame" x="53" y="323" width="268.5" height="21"/>
+                    <rect key="frame" x="53.5" y="323" width="268.5" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HRR-PX-oUr">
+                    <rect key="frame" x="162.5" y="508.5" width="50" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="50" id="EvG-CE-ndt"/>
+                        <constraint firstAttribute="height" constant="50" id="Fqi-vd-MHC"/>
+                    </constraints>
+                    <state key="normal" image="ios-flashlight"/>
+                    <connections>
+                        <action selector="flashlightAction:" destination="-1" eventType="touchUpInside" id="ofZ-fW-6QS"/>
+                    </connections>
+                </button>
                 <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dPx-5l-kK8">
                     <rect key="frame" x="8" y="28" width="50" height="30"/>
                     <constraints>
@@ -53,11 +65,14 @@
                 <constraint firstItem="b0y-T7-m36" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="jZq-ck-S8C"/>
                 <constraint firstItem="dPx-5l-kK8" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="28" id="nlG-A8-3Bx"/>
                 <constraint firstItem="dPx-5l-kK8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="8" id="obf-Bu-C9q"/>
+                <constraint firstItem="HRR-PX-oUr" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="opl-L8-A6H"/>
+                <constraint firstItem="HRR-PX-oUr" firstAttribute="centerY" secondItem="i5M-Pr-FkT" secondAttribute="centerY" multiplier="1.6" id="zzm-MA-h98"/>
             </constraints>
             <point key="canvasLocation" x="34.5" y="53.5"/>
         </view>
     </objects>
     <resources>
         <image name="back" width="27" height="27"/>
+        <image name="ios-flashlight" width="39" height="39"/>
     </resources>
 </document>
